[package]
name = "exponential-histogram"
version = "0.1.0"
edition = "2021"
description = "Auto-scaling approximate histogram"
license = "Apache-2.0"
authors = ["kvc0"]
readme = "README.md"
repository = "https://github.com/kvc0/exponential_histogram"
keywords = ["metrics", "service", "performance"]
categories = ["web-programming", "development-tools::profiling"]

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]

[dev-dependencies]
criterion                       = { version = "0.5" }
histogram                       = { version = "0.11" }
rand                            = { version = "0.8" }
